syntax = "proto3";
package df.plugin;

option go_package = "github.com/secmc/plugin/proto/generated";

import "common.proto";

message ActionBatch {
    repeated Action actions = 1;
}

message Action {
    optional string correlation_id = 1;
    oneof kind {
        // Player: Basic
        SendChatAction send_chat = 10;
        TeleportAction teleport = 11;
        KickAction kick = 12;
        SetGameModeAction set_game_mode = 13;
        // Player: Inventory & Items
        GiveItemAction give_item = 14;
        ClearInventoryAction clear_inventory = 15;
        SetHeldItemAction set_held_item = 16;
        // Player: State & Attributes
        SetHealthAction set_health = 20;
        SetFoodAction set_food = 21;
        SetExperienceAction set_experience = 22;
        SetVelocityAction set_velocity = 23;
        // Player: Effects
        AddEffectAction add_effect = 30;
        RemoveEffectAction remove_effect = 31;
        // Player: UI & Communication
        SendTitleAction send_title = 40;
        SendPopupAction send_popup = 41;
        SendTipAction send_tip = 42;
        PlayerSendToastAction player_send_toast = 118;
        PlayerSendJukeboxPopupAction player_send_jukebox_popup = 119;
        PlayerShowCoordinatesAction player_show_coordinates = 120;
        PlayerHideCoordinatesAction player_hide_coordinates = 121;
        PlayerEnableInstantRespawnAction player_enable_instant_respawn = 122;
        PlayerDisableInstantRespawnAction player_disable_instant_respawn = 123;
        // Player: Appearance (overhead)
        PlayerSetNameTagAction player_set_name_tag = 124;
        PlayerSetScoreTagAction player_set_score_tag = 125;
        // Player: Audio & Visuals
        PlaySoundAction play_sound = 43;
        PlayerShowParticleAction player_show_particle = 126;
        // Player: Commands
        ExecuteCommandAction execute_command = 50;
        // Player: Movement toggles
        PlayerStartSprintingAction player_start_sprinting = 94;
        PlayerStopSprintingAction player_stop_sprinting = 95;
        PlayerStartSneakingAction player_start_sneaking = 96;
        PlayerStopSneakingAction player_stop_sneaking = 97;
        PlayerStartSwimmingAction player_start_swimming = 98;
        PlayerStopSwimmingAction player_stop_swimming = 99;
        PlayerStartCrawlingAction player_start_crawling = 100;
        PlayerStopCrawlingAction player_stop_crawling = 101;
        PlayerStartGlidingAction player_start_gliding = 102;
        PlayerStopGlidingAction player_stop_gliding = 103;
        PlayerStartFlyingAction player_start_flying = 104;
        PlayerStopFlyingAction player_stop_flying = 105;
        // Player: Mobility lock
        PlayerSetImmobileAction player_set_immobile = 106;
        PlayerSetMobileAction player_set_mobile = 107;
        // Player: Movement attributes
        PlayerSetSpeedAction player_set_speed = 108;
        PlayerSetFlightSpeedAction player_set_flight_speed = 109;
        PlayerSetVerticalFlightSpeedAction player_set_vertical_flight_speed = 110;
        // Player: Health/Status
        PlayerSetAbsorptionAction player_set_absorption = 111;
        PlayerSetOnFireAction player_set_on_fire = 112;
        PlayerExtinguishAction player_extinguish = 113;
        PlayerSetInvisibleAction player_set_invisible = 114;
        PlayerSetVisibleAction player_set_visible = 115;
        // Player: Misc attributes
        PlayerSetScaleAction player_set_scale = 116;
        PlayerSetHeldSlotAction player_set_held_slot = 117;
        // Player: Lifecycle/Control
        PlayerRespawnAction player_respawn = 127;
        PlayerTransferAction player_transfer = 128;
        PlayerKnockBackAction player_knock_back = 129;
        PlayerSwingArmAction player_swing_arm = 130;
        PlayerPunchAirAction player_punch_air = 131;

        // World: Configuration & Settings
        WorldSetDefaultGameModeAction world_set_default_game_mode = 60;
        WorldSetDifficultyAction world_set_difficulty = 61;
        WorldSetTickRangeAction world_set_tick_range = 62;
        WorldSetBlockAction world_set_block = 63;
        WorldPlaySoundAction world_play_sound = 64;
        WorldAddParticleAction world_add_particle = 65;
        // World: Time
        WorldSetTimeAction world_set_time = 66;
        WorldStopTimeAction world_stop_time = 67;
        WorldStartTimeAction world_start_time = 68;
        WorldSetSpawnAction world_set_spawn = 69;
        // World: Mutations
        WorldSetBiomeAction world_set_biome = 90;
        WorldSetLiquidAction world_set_liquid = 91;
        WorldScheduleBlockUpdateAction world_schedule_block_update = 92;
        WorldBuildStructureAction world_build_structure = 93;

        // World: Queries - Entities & Players
        WorldQueryEntitiesAction world_query_entities = 70;
        WorldQueryPlayersAction world_query_players = 71;
        WorldQueryEntitiesWithinAction world_query_entities_within = 72;
        WorldQueryPlayerSpawnAction world_query_player_spawn = 74;
        // World: Queries - Blocks & Terrain
        WorldQueryBlockAction world_query_block = 75;
        WorldQueryBiomeAction world_query_biome = 76;
        WorldQueryLightAction world_query_light = 77;
        WorldQuerySkyLightAction world_query_sky_light = 78;
        WorldQueryTemperatureAction world_query_temperature = 79;
        WorldQueryHighestBlockAction world_query_highest_block = 80;
        // World: Queries - Weather & Environment
        WorldQueryRainingAtAction world_query_raining_at = 81;
        WorldQuerySnowingAtAction world_query_snowing_at = 82;
        WorldQueryThunderingAtAction world_query_thundering_at = 83;
        // World: Queries - Liquid & Settings
        WorldQueryLiquidAction world_query_liquid = 84;
        WorldQueryDefaultGameModeAction world_query_default_game_mode = 73;
    }
}

message SendChatAction {
    string target_uuid = 1;
    string message = 2;
}

message TeleportAction {
    string player_uuid = 1;
    Vec3 position = 2;
    // rotation vector mapping:
    //  x = pitch, y = yaw, z = head_yaw
    Vec3 rotation = 3;
}

message KickAction {
    string player_uuid = 1;
    string reason = 2;
}

message SetGameModeAction {
    string player_uuid = 1;
    GameMode game_mode = 2;
}

// Inventory & Items
message GiveItemAction {
    string player_uuid = 1;
    ItemStack item = 2;
}

message ClearInventoryAction {
    string player_uuid = 1;
}

message SetHeldItemAction {
    string player_uuid = 1;
    optional ItemStack main = 2;    // if set, updates main hand
    optional ItemStack offhand = 3; // if set, updates offhand
}

// Player State
message SetHealthAction {
    string player_uuid = 1;
    double health = 2;
    optional double max_health = 3;
}

message SetFoodAction {
    string player_uuid = 1;
    int32 food = 2; // 0-20
}

message SetExperienceAction {
    string player_uuid = 1;
    // If set, the player's level is set to this value.
    optional int32 level = 2;
    // If set, the player's progress bar (0..1) is set to this value.
    optional float progress = 3;
    // If set, raw experience points are added (can be negative to remove).
    optional int32 amount = 4;
}

message SetVelocityAction {
    string player_uuid = 1;
    Vec3 velocity = 2;
}

// Effects & Status
message AddEffectAction {
    string player_uuid = 1;
    EffectType effect_type = 2;
    int32 level = 3;        // amplifier level (1 = level I)
    int64 duration_ms = 4;  // duration in milliseconds
    bool show_particles = 5;
}

message RemoveEffectAction {
    string player_uuid = 1;
    EffectType effect_type = 2;
}

// UI & Communication
message SendTitleAction {
    string player_uuid = 1;
    string title = 2;
    optional string subtitle = 3;
    optional int64 fade_in_ms = 4;
    optional int64 duration_ms = 5;
    optional int64 fade_out_ms = 6;
}

message SendPopupAction {
    string player_uuid = 1;
    string message = 2;
}

message SendTipAction {
    string player_uuid = 1;
    string message = 2;
}

message PlaySoundAction { // TODO: it should probably be a world action
    string player_uuid = 1;
    Sound sound = 2;
    optional Vec3 position = 3;  // defaults to player position if unset
    optional float volume = 4;   // default 1.0
    optional float pitch = 5;    // default 1.0
}

// Commands
message ExecuteCommandAction {
    string player_uuid = 1;
    string command = 2; // without leading slash
}

message WorldSetDefaultGameModeAction {
    WorldRef world = 1;
    GameMode game_mode = 2;
}

message WorldSetDifficultyAction {
    WorldRef world = 1;
    Difficulty difficulty = 2;
}

message WorldSetTickRangeAction {
    WorldRef world = 1;
    int32 tick_range = 2;
}

message WorldSetBlockAction {
    WorldRef world = 1;
    BlockPos position = 2;
    optional BlockState block = 3; // nil clears to air
}

message WorldPlaySoundAction {
    WorldRef world = 1;
    Sound sound = 2;
    Vec3 position = 3;
}

message WorldAddParticleAction {
    WorldRef world = 1;
    Vec3 position = 2;
    ParticleType particle = 3;
    optional BlockState block = 4; // used for block-based particles when provided
    optional int32 face = 5; // used for punch_block when provided
}

message WorldSetTimeAction {
    WorldRef world = 1;
    int32 time = 2;
}

message WorldStopTimeAction {
    WorldRef world = 1;
}

message WorldStartTimeAction {
    WorldRef world = 1;
}

message WorldSetSpawnAction {
    WorldRef world = 1;
    BlockPos spawn = 2;
}

message WorldQueryDefaultGameModeAction {
    WorldRef world = 1;
}

message WorldQueryPlayerSpawnAction {
    WorldRef world = 1;
    string player_uuid = 2;
}

enum ParticleType {
    PARTICLE_TYPE_UNSPECIFIED = 0;
    PARTICLE_HUGE_EXPLOSION = 1;
    PARTICLE_ENDERMAN_TELEPORT = 2;
    PARTICLE_SNOWBALL_POOF = 3;
    PARTICLE_EGG_SMASH = 4;
    PARTICLE_SPLASH = 5;
    PARTICLE_EFFECT = 6;
    PARTICLE_ENTITY_FLAME = 7;
    PARTICLE_FLAME = 8;
    PARTICLE_DUST = 9;
    PARTICLE_BLOCK_FORCE_FIELD = 10;
    PARTICLE_BONE_MEAL = 11;
    PARTICLE_EVAPORATE = 12;
    PARTICLE_WATER_DRIP = 13;
    PARTICLE_LAVA_DRIP = 14;
    PARTICLE_LAVA = 15;
    PARTICLE_DUST_PLUME = 16;
    PARTICLE_BLOCK_BREAK = 17;
    PARTICLE_PUNCH_BLOCK = 18;
}

message WorldQueryEntitiesAction {
    WorldRef world = 1;
}

message WorldQueryPlayersAction {
    WorldRef world = 1;
}

message WorldQueryEntitiesWithinAction {
    WorldRef world = 1;
    BBox box = 2;
}

message WorldQueryBlockAction {
    WorldRef world = 1;
    BlockPos position = 2;
}

message WorldQueryBiomeAction {
    WorldRef world = 1;
    BlockPos position = 2;
}

message WorldQueryLightAction {
    WorldRef world = 1;
    BlockPos position = 2;
}

message WorldQuerySkyLightAction {
    WorldRef world = 1;
    BlockPos position = 2;
}

message WorldQueryTemperatureAction {
    WorldRef world = 1;
    BlockPos position = 2;
}

message WorldQueryHighestBlockAction {
    WorldRef world = 1;
    int32 x = 2;
    int32 z = 3;
}

message WorldQueryRainingAtAction {
    WorldRef world = 1;
    BlockPos position = 2;
}

message WorldQuerySnowingAtAction {
    WorldRef world = 1;
    BlockPos position = 2;
}

message WorldQueryThunderingAtAction {
    WorldRef world = 1;
    BlockPos position = 2;
}

message WorldQueryLiquidAction {
    WorldRef world = 1;
    BlockPos position = 2;
}

message WorldSetBiomeAction {
    WorldRef world = 1;
    BlockPos position = 2;
    string biome_id = 3; // e.g., "plains", "desert", "ocean"
}

message WorldSetLiquidAction {
    WorldRef world = 1;
    BlockPos position = 2;
    optional LiquidState liquid = 3; // nil to remove liquid
}

message WorldScheduleBlockUpdateAction {
    WorldRef world = 1;
    BlockPos position = 2;
    BlockState block = 3;
    int64 delay_ms = 4; // delay in milliseconds
}

// Structure building
message StructureVoxel {
    int32 x = 1;
    int32 y = 2;
    int32 z = 3;
    BlockState block = 4;             // use "minecraft:air" to explicitly clear
    optional LiquidState liquid = 5;  // optional second layer
}

message StructureDef {
    int32 width = 1;
    int32 height = 2;
    int32 length = 3;
    repeated StructureVoxel voxels = 10; // sparse set; omit positions for "no change"
}

message WorldBuildStructureAction {
    WorldRef world = 1;
    BlockPos origin = 2;      // world-space base position
    StructureDef structure = 3;
}

// Player: Movement toggles
message PlayerStartSprintingAction {
    string player_uuid = 1;
}
message PlayerStopSprintingAction {
    string player_uuid = 1;
}
message PlayerStartSneakingAction {
    string player_uuid = 1;
}
message PlayerStopSneakingAction {
    string player_uuid = 1;
}
message PlayerStartSwimmingAction {
    string player_uuid = 1;
}
message PlayerStopSwimmingAction {
    string player_uuid = 1;
}
message PlayerStartCrawlingAction {
    string player_uuid = 1;
}
message PlayerStopCrawlingAction {
    string player_uuid = 1;
}
message PlayerStartGlidingAction {
    string player_uuid = 1;
}
message PlayerStopGlidingAction {
    string player_uuid = 1;
}
message PlayerStartFlyingAction {
    string player_uuid = 1;
}
message PlayerStopFlyingAction {
    string player_uuid = 1;
}

// Player: Mobility lock
message PlayerSetImmobileAction {
    string player_uuid = 1;
}
message PlayerSetMobileAction {
    string player_uuid = 1;
}

// Player: Movement attributes
message PlayerSetSpeedAction {
    string player_uuid = 1;
    double speed = 2;
}
message PlayerSetFlightSpeedAction {
    string player_uuid = 1;
    double flight_speed = 2;
}
message PlayerSetVerticalFlightSpeedAction {
    string player_uuid = 1;
    double vertical_flight_speed = 2;
}

// Player: Health/Status
message PlayerSetAbsorptionAction {
    string player_uuid = 1;
    double absorption = 2;
}
message PlayerSetOnFireAction {
    string player_uuid = 1;
    int64 duration_ms = 2;
}
message PlayerExtinguishAction {
    string player_uuid = 1;
}
message PlayerSetInvisibleAction {
    string player_uuid = 1;
}
message PlayerSetVisibleAction {
    string player_uuid = 1;
}

// Player: Misc attributes
message PlayerSetScaleAction {
    string player_uuid = 1;
    double scale = 2;
}
message PlayerSetHeldSlotAction {
    string player_uuid = 1;
    int32 slot = 2; // 0-8
}

// Player: UI
message PlayerSendToastAction {
    string player_uuid = 1;
    string title = 2;
    string message = 3;
}
message PlayerSendJukeboxPopupAction {
    string player_uuid = 1;
    string message = 2;
}
message PlayerShowCoordinatesAction {
    string player_uuid = 1;
}
message PlayerHideCoordinatesAction {
    string player_uuid = 1;
}
message PlayerEnableInstantRespawnAction {
    string player_uuid = 1;
}
message PlayerDisableInstantRespawnAction {
    string player_uuid = 1;
}
message PlayerSetNameTagAction {
    string player_uuid = 1;
    string name_tag = 2;
}
message PlayerSetScoreTagAction {
    string player_uuid = 1;
    string score_tag = 2;
}

// Player: Visuals
message PlayerShowParticleAction {
    string player_uuid = 1;
    Vec3 position = 2;
    ParticleType particle = 3;
    optional BlockState block = 4; // used for block-based particles when provided
    optional int32 face = 5; // used for punch_block when provided
}

// Player: Lifecycle/Control
message PlayerRespawnAction {
    string player_uuid = 1;
}
message PlayerTransferAction {
    string player_uuid = 1;
    Address address = 2;
}
message PlayerKnockBackAction {
    string player_uuid = 1;
    Vec3 source = 2;
    double force = 3;
    double height = 4;
}
message PlayerSwingArmAction {
    string player_uuid = 1;
}
message PlayerPunchAirAction {
    string player_uuid = 1;
}
